Inserindo spring DATA JPA

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=hire_hub
+spring.datasource.url=jdbc:postgresql://localhost:5432/hire_hub
+spring.datasource.username=admin
+spring.datasource.password=admin
