Corrigindo spring DATA JPA

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,24 @@
+version: "3.9"
+
 services:
   postgres:
     container_name: hire_hub_postgres
-    image: postgres
-    ports:
-      - 5432:5432
+    image: postgres:16
+    restart: always
     environment:
-      - POSTGRES_USER=admin
-      - POSTGRES_PASSWORD=admin
-      - POSTGRES_DB=hire_hub
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin
+      POSTGRES_DB: hire_hub
+      PGDATA: /var/lib/postgresql/data/pgdata
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U admin -d hire_hub"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+volumes:
+  postgres_data:
