--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,27 @@
+# ======================================
+# APP CONFIG
+# ======================================
 spring.application.name=hire_hub
+server.port=8080
+
+# ======================================
+# DATABASE CONFIG
+# ======================================
 spring.datasource.url=jdbc:postgresql://localhost:5432/hire_hub
 spring.datasource.username=admin
 spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# ======================================
+# JPA / HIBERNATE CONFIG
+# ======================================
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# ======================================
+# ENCODING
+# ======================================
+spring.datasource.hikari.data-source-properties.useUnicode=true
+spring.datasource.hikari.data-source-properties.characterEncoding=UTF-8
