Removendo logs de dados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,12 +16,14 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # JPA / HIBERNATE CONFIG
 # ======================================
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
+
+# Evita o warning "spring.jpa.open-in-view is enabled by default"
+spring.jpa.open-in-view=false
 
 # ======================================
-# ENCODING
+# HIKARI / ENCODING
 # ======================================
 spring.datasource.hikari.data-source-properties.useUnicode=true
 spring.datasource.hikari.data-source-properties.characterEncoding=UTF-8
