--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,7 @@ spring.jpa.open-in-view=false
 # ======================================
 spring.datasource.hikari.data-source-properties.useUnicode=true
 spring.datasource.hikari.data-source-properties.characterEncoding=UTF-8
+
+security.token.secret=HIRE_BUG@123@#
+
+
