--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,15 +19,11 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
-# Evita o warning "spring.jpa.open-in-view is enabled by default"
 spring.jpa.open-in-view=false
 
-# ======================================
-# HIKARI / ENCODING
-# ======================================
 spring.datasource.hikari.data-source-properties.useUnicode=true
 spring.datasource.hikari.data-source-properties.characterEncoding=UTF-8
 
-security.token.secret=HIRE_BUG@123@#
+security.token.secret=hireJobs
 
 
